--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ html {
   
   html,
   body {
-    height: 9000px;
+
     margin: 0;
     padding: 0;
   }
@@ -407,6 +407,86 @@ align-items: center;
     padding-bottom: 15px;
     font-weight: 700;
 
+}
+
+/**appearances**/
+#appearancesPanel{
+    background-color: rgb(161, 161, 161);
+    margin-top: 50px;
+    border-radius: 15px;
+}
+
+/**appearances buttons**/
+#appearancesMentionOnlyButtons{
+    display: flex;
+    flex-direction: row;
+    max-width: 100%;
+    box-shadow: 0 0 10px 5px rgba(5, 5, 5, 0.564);
+}
+
+#appearancesButton,#MentionedButton{
+    font-size: 30px;
+    font-weight: 700;
+    cursor: pointer;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    background-color: rgb(83, 83, 83);
+    padding: 30px;
+    min-height: 50px;
+    max-width: 100%;
+    border: 2px solid white;
+    flex: 1;
+    margin: 0;
+}
+
+#appearancesButton:hover,#MentionedButton:hover{
+    background-color: rgb(57, 57, 57);
+}
+
+#appearancesButton{
+    border-top-left-radius: 10px;
+}
+
+#MentionedButton{
+    border-top-right-radius: 10px;
+}
+
+#appearancesNavigationContainer{
+    display: flex;
+    margin: 0;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+#appearancePageNumber{
+    font-size: 30px;
+}
+
+#appearancesPostersContainer{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 0%;
+    gap: 30px;
+    padding: 30px;
+    padding-top: 0%;
+}
+
+#posterOne,#posterTwo,#posterThree{
+    width: 250px;
+    height: 400px;
+}
+
+#posterOne:hover,#posterTwo:hover,#posterThree:hover{
+    width: 300px;
+    height: auto;
+    box-shadow: 0 0 15px rgb(0, 0, 0);
+    transition: ease 1s 0s;
 }
 
 @media (max-width:1500px){
