--- a/styles.css
+++ b/styles.css
@@ -18,19 +18,26 @@ html {
 /**background**/
 body{
     background-image:url(/photos/wall.jpg);
-    background-attachment: fixed; 
     background-size:50%;
 }
 
 /**first panel**/
+
+#topNonflexContainer{
+    display: flex;
+    flex-direction: column;
+    position: sticky;
+    background-image: url(photos/pzRoAuA.jpg);
+    top: 0;
+    box-shadow: 0 0 10px 5px rgb(44, 44, 44);
+}
+
 #topPanel{
    display: flex;
    height: 150px;
    width: auto;
    background-image: url(photos/pzRoAuA.jpg);
    justify-content: flex-start;
-   position: sticky;
-   top:0px; 
    box-shadow: 0 0 10px 5px rgb(44, 44, 44);
    gap: 5px;
 }
@@ -63,21 +70,29 @@ body{
     flex-grow: 1;
 }
 
-#search::placeholder{
+#search::placeholder,
+#search2::placeholder{
     color: yellow;
     text-align: center;
+}
+
+#search:focus::placeholder,
+#search2:focus::placeholder{
+    color: transparent;
 }
 
 /**top rightside buttons**/
 #charactersDropdown{
     width: 200px;
     flex-grow: 2;
+    cursor: pointer;
 }
 
 #mediaDropdown{
     width: 200px;
     border-left: 2px solid yellow;
     flex-grow: 2;
+    cursor: pointer;
 }
 
 #characterButton,
@@ -91,6 +106,10 @@ body{
     justify-content: center;
     align-items: center;
     border-right: 2px solid yellow;
+}
+
+#mediaButton{
+    border-right: 0px;
 }
 
 #characterOptions,
@@ -145,6 +164,19 @@ body{
 #mediaOptions a:last-child {
     border-bottom-right-radius: 15px;
     border-bottom-left-radius: 15px;
+}
+
+#search2{
+    display: none;
+    height: 50px;
+    max-width: 100%;
+    font-size: 20px;
+    margin: auto;
+    color: yellow;
+    background-color: rgb(10, 10, 10);
+    border: 2px solid yellow;
+    border-radius: 15px;
+    flex-grow: 1;
 }
 
 /**2nd panel**/
@@ -285,6 +317,7 @@ body{
 /**photo side**/
 #infoPhotoContainer{
 width: 33%;
+min-height: 400px;
 display: flex;
 justify-content: center;
 align-items: center;
@@ -376,11 +409,11 @@ align-items: center;
     z-index: 1;
 }
 
-#personalityOptions a,
-#bioOptions a {
+#personalityOptions p,
+#bioOptions p {
     color-scheme: yellow;
-    display: block;
-    text-decoration: none;
+    margin:0%;
+    cursor: pointer;
 }
 
 #bioDropdown:hover #bioOptions,
@@ -445,6 +478,7 @@ align-items: center;
 .PreviousPage,.nextPage{
     max-width: 70px;
     display: block;
+    cursor: pointer;
 }
 
 #bioPageNumber{
@@ -609,15 +643,31 @@ align-items: center;
     #name{
         font-size: 70px;
     }
+
+    .dropdownPersonalityOptions,.dropdownBioOptions{
+        font-size: 20px;
+    }
 }
 
 @media (max-width:600px){
+    #topNonflexContainer{
+        border: 1px solid yellow;
+    }
+
     #topPanel{
         height: 100px;
+        box-shadow: 0 0 10px 5px transparent;
+        border-bottom: 0px;
     }
 
     #search{
         display: none;
+    }
+
+    #search2{
+        display: block;
+        flex-wrap: wrap;
+        padding: 20px;
     }
 
     #profilePhoto{
@@ -671,6 +721,14 @@ align-items: center;
 
     #infoPic{
         max-width: 200px;
+    }
+
+    #infoPhotoContainer{
+        min-height: 200px;
+        }
+
+    .dropdownPersonalityOptions, .dropdownBioOptions{
+        font-size: 15px;
     }
 
 }
